<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:minWidth="800dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/add_lbl_prepare_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@color/content_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/lbl_hour" />

            <NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/lbl_minute" />

            <NumberPicker
                    android:id="@+id/minutePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content_bg"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            style="?attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"
            android:text="@string/btn_cancel" />

        <View
            android:layout_width="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</LinearLayout>