<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/content_bg"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/recipeCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_sample_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeCategory"
            android:text="@string/gallery_sample_time" />

        <TextView
            android:id="@+id/viewMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:text="@string/gallery_more"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#007C21"
            android:textStyle="bold" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/galleryScroll"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content" /> -->
</LinearLayout>